[workspace]

members = [
    "hhcore", "common", "batched-flpcp-rs", "client-hh", "server-hh", "client-batch-prio3", 
    "server-batch-prio3", "bin-utils", "bridge", "serialize", "server-base-prio3",
    "client-base-prio3",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'
debug = false

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = true

[profile.dev]
opt-level = 0
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true