[package]
name = "client-batch-prio3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "^1.12.0", features = ["full"] }
rayon = "1.3.1"
bridge = {version = "0.1.0", path = "../bridge"}
rand = "0.8.5"
serialize = {version = "0.1.0", path = "../serialize"}
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = "0.3"
bin-utils = {version = "0.1.0", path = "../bin-utils", features = ["prioclient"]}
typenum = "1.16.0"
zipf = "7.0.0"
sha2 = "0.10"
sha256 = "1.1.2"
prio = {version = "0.15", path = "../batched-flpcp-rs"}

[features]
multithreaded = []
client = []