[package]
name = "client-hh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "^1.12.0", features = ["full"] }
rayon = "1.3.1"
bridge = {version = "0.1.0", path = "../bridge"}
rand = "0.8.5"
serialize = {version = "0.1.0", path = "../serialize"}
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = "0.3"
hhcore = {version = "0.1.0", path = "../hhcore"}
bin-utils = {version = "0.1.0", path = "../bin-utils", features = ["hhclient"]}
common = {version = "0.1.0", path = "../common"}
typenum = "1.16.0"
zipf = "7.0.0"
sha2 = "0.10"
sha256 = "1.1.2"

[features]
default = []
streaming = []
multithreaded = []
