[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "^1.12.0", features = ["full"] }
rayon = "1.3.1"
aes = "0.8"
ctr = "0.9.2"
ecb = "0.1.2"
bridge = {version = "0.1.0", path = "../bridge"}
serialize = {version = "0.1.0", path = "../serialize"}
queues = "1.0.2"
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = "0.3"
sha2 = "0.10"
sha256 = "1.1.2"
typenum = "1.16.0"
rand = "0.8.5"
rand_core = "0.6.4"
prio = {version = "0.15", path = "../batched-flpcp-rs"}
zipf = "7.0.0"
sha3 = "0.10.8"

[features]
# streaming = [] # no communication for debugging