[package]
name = "hhcore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_core = "0.6.4"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.3.1"
zipf = "7.0.0" 
sha256 = "1.1.2"
sha2 = "0.10.8"
serialize = {path = "../serialize"}
common = {path = "../common"}
typenum = "1.16.0"
prio = {version = "0.15", path = "../batched-flpcp-rs"}
colored = "2.1.0"


[features]
multithreaded = []

